--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "errorhandler": "^1.0.0",
     "express": "^4.2.0",
     "express-session": "^1.1.0",
-    "express-validator": "^2.1.1" 
+    "express-validator": "^2.1.1",
+    "body-parser": "*"
+
   },
   "devDependencies": {
     "grunt-karma": "^0.8.2",
